# n8n_be

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
agents/: __init__.py  builder.py
agents/configs/: n8n_teacher.yaml
agents/mcp/: __init__.py  client.py
agents/memory/: __init__.py  manager.py
agents/tools/: __init__.py  definitions.py  executor.py
apps/admin/: __init__.py  api.py  apps.py  models.py  schemas.py
apps/auth/: api.py  apps.py  models.py  schemas.py
apps/auth/migrations/: 0001_initial.py
apps/billing/: api.py  models.py  schemas.py
apps/billing/migrations/: 0001_initial.py
apps/blog/: api.py  models.py  schemas.py
apps/blog/migrations/: 0001_initial.py
apps/chat/: api.py  apps.py  models.py  schemas.py
apps/chat/migrations/: 0001_create_chat_tables.py
apps/chat/prompts/: __init__.py
apps/convert/: __init__.py  api.py  apps.py  models.py  schemas.py
apps/generate/: __init__.py  api.py  apps.py  schemas.py
apps/keys/: __init__.py  api.py  apps.py  models.py  schemas.py
apps/keys/migrations/: 0001_initial.py
apps/usage/: __init__.py  api.py  models.py  schemas.py
apps/usage/migrations/: 0001_initial.py
apps/users/: api.py  models.py  schemas.py
apps/users/migrations/: 0001_initial.py
apps/workflow/: __init__.py  api.py  schemas.py
core/: api.py  asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  test_admin.py  test_auth.py  test_billing.py  test_blog.py  test_chat.py  test_keys.py  test_usage.py
utils/: auth.py
